<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/backgroundcustom"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.ActivityMain" >

    <LinearLayout
        android:id="@+id/linLayOut1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <TableRow
            android:id="@+id/fistrow"
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TableRow
            android:id="@+id/rowAddEvent"
            style="@style/FishermanMainMenuTableRowStyle"
            android:layout_width="fill_parent"
            android:background="@drawable/cellshape"
            android:contentDescription="@string/Events"
            android:padding="5dp" >

            <ImageButton
                android:id="@+id/btnAddEvent"
                style="@style/FishermanButton"
                android:contentDescription="@string/Events"
                android:src="@drawable/fishing" />

            <TextView
                android:id="@+id/txtAddEvent"
                style="@style/Fisherman.Orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Events" />
        </TableRow>

        <TableRow
            android:id="@+id/emptyTableRow1"
            android:layout_width="match_parent"
            android:layout_height="15dp" >
        </TableRow>

        <TableRow
            android:id="@+id/rowViewReport"
            style="@style/FishermanMainMenuTableRowStyle"
            android:layout_width="match_parent"
            android:background="@drawable/cellshape"
            android:contentDescription="@string/Reports"
            android:padding="5dp" >

            <ImageButton
                android:id="@+id/btnViewReport"
                style="@style/FishermanButton"
                android:contentDescription="@string/Reports"
                android:src="@drawable/report" />

            <TextView
                android:id="@+id/txtViewReport"
                style="@style/Fisherman.Orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Reports" />
        </TableRow>

        <TableRow
            android:id="@+id/emptyTableRow2"
            android:layout_width="match_parent"
            android:layout_height="15dp" >
        </TableRow>

        <TableRow
            android:id="@+id/rowImportExport"
            style="@style/FishermanMainMenuTableRowStyle"
            android:layout_width="match_parent"
            android:background="@drawable/cellshape"
            android:padding="5dp" >

            <ImageButton
                android:id="@+id/btnImportExport"
                style="@style/FishermanButton"
                android:contentDescription="@string/Moon_Calendar"
                android:src="@drawable/importexport" />

            <TextView
                android:id="@+id/txtImportExport"
                style="@style/Fisherman.Orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="@string/ImportExport" />
        </TableRow>

        <TableRow
            android:id="@+id/emptyTableRow3"
            android:layout_width="match_parent"
            android:layout_height="30dp" >
        </TableRow>

        <LinearLayout
            android:id="@+id/rowFishCount"
            style="@style/FishermanMainMenuTableRowStyle"
            android:layout_width="match_parent"
            android:background="@drawable/cellshape"
            android:orientation="vertical"
            android:padding="5dp" >

            <TableRow
                android:id="@+id/rowFishCountMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" >

                <TextView
                    android:id="@+id/txtNumberFishCount"
                    style="@style/Fisherman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="3399945"
                    android:textSize="48sp"
                    tools:ignore="HardcodedText" />
            </TableRow>

            <TableRow
                android:id="@+id/rowFishCount1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" >

                <TextView
                    android:id="@+id/txtFishCaught"
                    style="@style/Fisherman.Orange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Fishes_Caught"
                    android:textSize="24sp" />
            </TableRow>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>